<resources>
    <string name="app_name">MegaCards</string>
    <string name="add_screenshot">Add Screenshot</string>
    <string name="delete_screenshot">Delete Screenshot</string>
    <string name="edit_screenshot">Edit Screenshot</string>
    <string name="export_settings">Export Settings</string>
    <string name="rename_tab">Rename Tab</string>
    <string name="move_tab">Move Tab</string>
    <string name="delete_tab">Delete Tab</string>
    <string name="exit">Exit</string>
</resources>
