<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_addscreenshot"
        android:title="@string/add_screenshot" />
    <item
        android:id="@+id/id_deletescreenshot"
        android:title="@string/delete_screenshot" />
    <item
        android:id="@+id/id_editscreenshot"
        android:title="@string/edit_screenshot" />
    <item
        android:id="@+id/id_exportsettings"
        android:title="@string/export_settings" />
    <item
        android:id="@+id/id_renametab"
        android:title="@string/rename_tab" />
    <item
        android:id="@+id/id_movetab"
        android:title="@string/move_tab" />
    <item
        android:id="@+id/id_deletetab"
        android:title="@string/delete_tab" />
    <item
        android:id="@+id/id_exit"
        android:title="@string/exit" />

</menu>